minor spacing and body font fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Host Grotesk';
-  src: url('HostGrotesk-Regular.ttf') format('ttf');
+  src: url('HostGrotesk-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
